# Mobile-Sensing

./: README.md
Data/: Mobile_Sensing_Data_Simulated.ipynb  README.md  activity_features.py  combine.py  config.py  generate_synthetic_data.py  geo.py  personas.py  screen_features.py  sleep_features.py
Data/Code/: README-2.md  README.md  __init__.py  activity_features.py  cli.py  combine.py  config.py  generator.py  gps_features.py  personas.py  pyproject.toml  screen_features.py  sleep_features.py
